--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -1,10 +1,16 @@
+require:
+  - rubocop-performance
+  - rubocop-rake
+  - rubocop-rspec
+
 inherit_from:
   - .rubocop_todo.yml
   - .rubocop/naming.yml
   - .rubocop/style.yml
 
 AllCops:
-  DefaultFormatter: fuubar
-  DisplayCopNames: true
   NewCops: enable
+  DisplayCopNames: true
+  DisplayStyleGuide: true
+  ExtraDetails: true
   TargetRubyVersion: 2.6
